Fix - fixed display so particular parts are aligned with each other

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -46,7 +46,7 @@ h2 {
 
 .Tracks {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -55,11 +55,15 @@ h2 {
 }
 
 .New-playlist {
-  height: 100%;
-  width:100%;
+  padding: .88rem;
+  background-color: rgba(1, 12, 63, 0.7);
+  box-shadow: 0 4px 2px 2px #000000;
+  margin: .88rem 0;
+  height: 950px;
+  width: 37%;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 
 @media only screen and (max-width: 1020px) {
