--- a/src/Components/ChosenGenreBar/ChosenGenreBar.css
+++ b/src/Components/ChosenGenreBar/ChosenGenreBar.css
@@ -1,5 +1,5 @@
 .ChosenGenreBar {
-    width: 50%;
+    /* width: 100%; */
     height: 300px;
     overflow-y: scroll;
     padding: .88rem;
@@ -7,7 +7,6 @@
     box-shadow: 0 4px 2px 2px #000000;
     margin: .88rem 0;
     /* padding: 2.27rem 1.16rem; */
-    width: 37%;
   }
 
   ::-webkit-scrollbar {
