--- a/src/Components/NewPlaylist/NewPlaylist.css
+++ b/src/Components/NewPlaylist/NewPlaylist.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     align-items: center;
     overflow-y: scroll;
-    width: 37%;
-    max-height: 950px;
+    height: 950px;
+    /* width: 37%; */
+    /* max-height: 950px; */
     padding: .88rem;
-    margin: .88rem 0;
+    /* margin: .88rem 0; */
     /* padding: 2.27rem 1.16rem; */
     background-color: rgba(1, 12, 63, 0.7);
     box-shadow: 0 4px 2px 2px #000000;
